<resources>
    <string name="app_name">One Night Ultimate Orwell</string>
    <string name="config_select_title1">One Night</string>
    <string name="config_select_title2">Ultimate Orwell</string>
    <string name="start_game">Start Game</string>

    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_stop">Stop</string>

    <string name="brotherhood_title">The Brotherhood</string>
    <string name="party_title">The Party</string>
</resources>
