<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/top_text_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/config_select_title1"
                android:textSize="64sp"/>

        <TextView
                android:id="@+id/top_text_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/config_select_title2"
                android:textSize="48sp"/>

    </LinearLayout>

    <TextView
            android:id="@+id/world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/narration_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

        <ToggleButton
                style="@style/button"
                android:id="@+id/pause_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="12dp"
                android:textOff="@string/button_pause"
                android:textOn="@string/button_resume"/>

        <Button
                style="@style/button"
                android:id="@+id/stop_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="48dp"
                android:text="@string/button_stop"/>


    </LinearLayout>

</LinearLayout>