<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/top_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/top_text_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/config_select_title1"
                        android:textSize="64sp"/>

                <TextView
                        android:id="@+id/top_text_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/config_select_title2"
                        android:textSize="48sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/role_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="vertical"
                android:paddingBottom="90dp">

                <TextView
                        style="@style/role_select_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/brotherhood_title"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                </LinearLayout>


                <TextView
                        style="@style/role_select_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/party_title"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                    <dev.benchristians.a1984werewolf.RoleSelectView
                            style="@style/role_select_button"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

        <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@drawable/bottom_gradient"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:orientation="vertical">

            <Button
                    style="@style/button"
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/start_game"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>